コンテンツ更新

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 //		}
 	}
 	function onmouseleaveMain(){
-//		document.getElementById('main').style.opacity=0.7;		
+//		document.getElementById('main').style.opacity=0.7;
 //		for(var i = 0.9; i>=0.7; i = i - 0.01){
 			$('#main').css({'background-color':'rgba(0,0,0,0.7)'});
 //		}
 	}
-	
+
 	function openMenu(){
       $("#content-inside").css({opacity: 0,display:"block"});
       $("#content").animate(
@@ -71,7 +71,7 @@
         "1000"
       );*/
 	}
-	
+
     </script>
  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -110,40 +110,22 @@
           </div>
           <div id="content">
           	<div id="content-inside">
-          		<div class="row">
-	          		<div class="col-sm-6">
-	          			<a href="http://mazitsurai.net"><h2 class="">まじつらい</h2></a>
-	          			つらい専用SNS。iOS向けアプリ。つらいに特化した、メッセンジャーとSNSの融合。<br>
-	          			ついつい使いたくなるUIを導入。
-	          		</div>
-	          		<div class="col-sm-6">
-	          			<h2 class="">Calfol</h2>
-	          			カレンダーをフォローして共有するアプリケーション。予定クリエーターがフォロワーのカレンダーに予定を配信することができます。</br>
-	          			※サービス終了
-	          		</div>
-          		</div>
-          		<div class="row">
-	          		<div class="col-sm-6">
-	          			<a href="http://tak0002.github.io/jquery.graspSchedule.js/"><h2 class="">GraspSchedule.js</h2></a>
-	          			複雑なスケージュールを可視化できるjQueryプラグイン。イベントカレンダーとタイムラインのいいとこ取りをしたUIを採用。日本、英語圏、ロシア、中国、韓国、フィリピンなどの有名サイトの記事にて紹介される。
-	          		</div>
-	          		<div class="col-sm-6">
-	          			<a href="http://wepia.biz/wellness/"><h2 class="">SFC Wellness bot</h2></a>
-	          			ツイ廃ほど体育が取りたくなる。慶應義塾大学湘南藤沢キャンパスの体育の授業に必須のアイテム。体育履修者の1/3以上が利用。
-	          		</div>		          	
-          		</div>
+                <h1 class="cover-heading">wepia.biz</h1>
+                <p class="lead">
+                    wepia.bizは、個人で開発したWebアプリケーションやサービスを紹介するサイトでしたが、多忙のため十分な管理ができないため、
+                    すべてのサービスの運営を終了しました。</br>
+                    経歴についてはSNSをご覧ください。</br>
+                </p>
 			</div>
           </div>
           <div class="mastfoot">
             <div class="inner" id="social">
-            twitter <a href="https://twitter.com/Tak0002">@Tak0002</a><br>
+            LinkedIn <a href="https://www.linkedin.com/in/tak0002">Tak0002</a><br>
+            YOUTRUST <a href=https://youtrust.jp/users/tak" target="_blank">tak</a><br>
             facebook <a href="https://www.facebook.com/takahiro1220">takahiro1220</a><br>
-            ask.fm <a href="http://ask.fm/Tak0002">Tak0002</a><br>
             github <a href="https://github.com/Tak0002">Tak0002</a><br>
-            blog <a href="/blog/">Tak0002</a><br>
-            pictures <a href="/pictures/">Tak0002</a>
             <p>
-            
+
             </div>
           </div>
 
