--- a/index.html
+++ b/index.html
@@ -11,80 +11,36 @@
 
     <title>wepia.biz</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+      <!-- Bootstrap core CSS -->
+      <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous"
+      >
 
     <!-- Custom styles for this template -->
     <link href="cover.css?201601081623" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript">
-	var i = 0;
-	var int;
-	$(window).bind("load", function() {
-	    $('#main').fadeIn(2000); // フェードインの実行
-	    int=setInterval("sFade(i)",900);  // ミリ秒ごとにフェードインの処理の実行
-	});
-	function sFade() {
-	    if (i >= 1) {
-	        clearInterval(int); // setIntervalの解除
-	        openMenu();
-	    }
-	    i++;
-	}
-	function onmouseenterMain(){
-//		document.getElementById('main').style.opacity=0.8;
-//		for(var i = 0.7; i<=0.9; i = i + 0.01){
-			$('#main').css({'background-color':'rgba(0,0,0,0.8)'});
-//		}
-	}
-	function onmouseleaveMain(){
-//		document.getElementById('main').style.opacity=0.7;
-//		for(var i = 0.9; i>=0.7; i = i - 0.01){
-			$('#main').css({'background-color':'rgba(0,0,0,0.7)'});
-//		}
-	}
-
-	function openMenu(){
-      $("#content-inside").css({opacity: 0,display:"block"});
-      $("#content").animate(
-        {height: "show"},
-        "700",
-        "swing",
-        function(){
-	      $("#content-inside").animate(
-	        {opacity: 1},
-	        "1200"
-	      );
-        }
-      );
-      /*$("#content-inside").animate(
-        {opacity: 1},
-        "1000"
-      );*/
-	}
-
-    </script>
- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-61908764-1', 'auto');
-  ga('send', 'pageview');
-
-  </script>
-  <script src="//use.typekit.net/rbo8pzu.js"></script>
-  <script>try{Typekit.load();}catch(e){}</script>
+      <!-- Google tag (gtag.js) -->
+      <script
+        async
+        src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"
+        integrity="sha384-BceIIzLI/5JVWtqBqkZOY2loLZMBvyVuItx+/hO+ceCahZG1u3weXKYt6ww67r7r"
+        crossorigin="anonymous"
+      ></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-XXXXXXXXXX');
+      </script>
+      <script
+        src="https://use.typekit.net/rbo8pzu.js"
+        integrity="sha384-RrJguGKNlfGMV28VKjD87oi8OhnGODl65NGbpSkgG+v6XVE5Qy3kxgWk/C5qI0hj"
+        crossorigin="anonymous"
+      ></script>
+      <script>try{Typekit.load();}catch(e){}</script>
   </head>
 
   <body>
@@ -102,12 +58,12 @@
               <h3 class="masthead-brand">wepia.biz</h3>
             </div>
           </div>
-          <div id="blog">
-              <div id='main' class="inner cover" onmouseenter="onmouseenterMain()" onmouseleave="onmouseleaveMain()">
-                  <img id='logo' src='wlogo.png'>
- 	                 <span class="tk-fira-sans-2">Takahiro Watanabe</span>
-              </div>
-          </div>
+            <div id="blog">
+                <div id='main' class="inner cover">
+                    <img id='logo' src='wlogo.png'>
+                           <span class="tk-fira-sans-2">Takahiro Watanabe</span>
+                </div>
+            </div>
           <div id="content">
           	<div id="content-inside">
                 <h1 class="cover-heading">wepia.biz</h1>
@@ -121,7 +77,7 @@
           <div class="mastfoot">
             <div class="inner" id="social">
             LinkedIn <a href="https://www.linkedin.com/in/tak0002">Tak0002</a><br>
-            YOUTRUST <a href=https://youtrust.jp/users/tak" target="_blank">tak</a><br>
+              YOUTRUST <a href="https://youtrust.jp/users/tak" target="_blank">tak</a><br>
             facebook <a href="https://www.facebook.com/takahiro1220">takahiro1220</a><br>
             github <a href="https://github.com/Tak0002">Tak0002</a><br>
             <p>
@@ -135,11 +91,13 @@
 
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/docs.min.js"></script>
+      <!-- Bootstrap core JavaScript -->
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"
+      ></script>
+      <script type="module" src="js/main.js"></script>
   </body>
 </html>
 
