--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <!-- Google tag (gtag.js) -->
       <script
         async
-        src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"
+        src="https://www.googletagmanager.com/gtag/js?id=G-KS9BY8WL54"
         integrity="sha384-BceIIzLI/5JVWtqBqkZOY2loLZMBvyVuItx+/hO+ceCahZG1u3weXKYt6ww67r7r"
         crossorigin="anonymous"
       ></script>
@@ -33,7 +33,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX');
+        gtag('config', 'G-KS9BY8WL54');
       </script>
       <script
         src="https://use.typekit.net/rbo8pzu.js"
